[gd_scene load_steps=7 format=3 uid="uid://c6qnbein7kxmj"]

[ext_resource type="Texture2D" uid="uid://c6wa1cye3a8a6" path="res://textures/player.png" id="1_838q1"]
[ext_resource type="Script" path="res://scripts/instances/player.gd" id="1_a2xcb"]
[ext_resource type="Texture2D" uid="uid://bofyc56ddgsct" path="res://textures/revolver.png" id="3_0eeo5"]
[ext_resource type="Script" path="res://scripts/classes/Hurtbox.gd" id="4_g8itl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ralf"]
radius = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2fa6r"]
size = Vector2(14, 10)

[node name="Player" type="CharacterBody2D"]
collision_layer = 4
motion_mode = 1
script = ExtResource("1_a2xcb")

[node name="Player" type="Sprite2D" parent="."]
texture = ExtResource("1_838q1")
offset = Vector2(0, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1ralf")

[node name="ItemHandle" type="Node2D" parent="."]

[node name="Item" type="Sprite2D" parent="ItemHandle"]
position = Vector2(16, 0)
texture = ExtResource("3_0eeo5")

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource("4_g8itl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_2fa6r")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = -18.0
max_value = 5.0
value = 5.0
show_percentage = false

[node name="ItemCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
